# legal-llm

./: .env.example  .gitignore  README.md  debug_chroma.py  debug_openai.py  pyproject.toml
src/data_gen/: base_generator.py  generate.py  generate_batch.py
src/finetune/: data_sampler.py  decisions.md  evaluate.py  train.py
src/inference/: chat.py  server.py
src/rag/: case_filtering.py  case_parser.py  ingest.py  retriever.py
src/scripts/: download_all_reporters.py  download_reporter.py  migrate_data_to_id.py  sample_data.py
tests/: test_api.py  verify_parsing.py
